// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly for desktop 1`] = `
@media screen and (min-width:769px) and (max-width:1024px) {
  .emotion-2 {
    color: red;
  }
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2"
/>
`;

exports[`props should render correctly for fullHD 1`] = `
@media screen and (min-width:1201px) and (max-width:1440px) {
  .emotion-2 {
    color: red;
  }
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2"
/>
`;

exports[`props should render correctly for max-tablet 1`] = `
@media screen and (max-width:768px) {
  .emotion-2 {
    color: red;
  }
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2"
/>
`;

exports[`props should render correctly for min-desktop 1`] = `
@media screen and (min-width:769px) {
  .emotion-2 {
    color: red;
  }
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2"
/>
`;

exports[`props should render correctly for mobile 1`] = `
@media screen and (min-width:1px) and (max-width:480px) {
  .emotion-2 {
    color: red;
  }
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2"
/>
`;

exports[`props should render correctly for tablet 1`] = `
@media screen and (min-width:481px) and (max-width:768px) {
  .emotion-2 {
    color: red;
  }
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2"
/>
`;

exports[`props should render correctly for widescreen 1`] = `
@media screen and (min-width:1025px) and (max-width:1200px) {
  .emotion-2 {
    color: red;
  }
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2"
/>
`;
